versions/v1.2.0/modules/ja/pages/references/crds.adoc
[id="k3k-api-reference"]
:page-languages: [en, de, es, fr, ja, pt, zh]
= APIリファレンス
:revdate: "2026-08-26"
:page-revdate: {revdate}
:anchor_prefix: k8s-api

== パッケージ
- xref:{anchor_prefix}-k3k-io-v1beta1[$$k3k.io/v1beta1$$]


[id="{anchor_prefix}-k3k-io-v1beta1"]
== k3k.io/v1beta1


=== リソースタイプ
- xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-cluster[$$Cluster$$]
- xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterlist[$$ClusterList$$]
- xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicy[$$VirtualClusterPolicy$$]
- xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicylist[$$VirtualClusterPolicyList$$]



[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-addon"]
=== アドオン



アドオンは、クラスター起動時にデプロイされるYAMLを含むシークレットを指定します。



_表示される:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterspec[$$ClusterSpec$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| フィールド | 説明 | デフォルト | 検証
| *`secretNamespace`* __string__| SecretNamespaceはシークレットのネームスペースです。 + |  | 
| *`secretRef`* __string__| SecretRefはシークレットの名前です。 + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-appliedpolicy"]
=== AppliedPolicy



AppliedPolicyは、適用されたポリシーの観測された状態を定義します。



_表示される:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterstatus[$$ClusterStatus$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| フィールド | 説明 | デフォルト | 検証
| *`name`* __string__| name は、このクラスターに現在適用されている VirtualClusterPolicy の名前です。 + |  | MinLength: 1 +

| *`priorityClass`* __string__| priorityClass は、アクティブな VirtualClusterPolicy によって適用される優先度クラスです。 + |  | 
| *`nodeSelector`* __object (keys:string, values:string)__| nodeSelector は、アクティブな VirtualClusterPolicy によって適用されるノードセレクターです。 + |  | 
| *`serverAffinity`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#affinity-v1-core[$$Affinity$$]__| serverAffinity は、アクティブな VirtualClusterPolicy によって適用されるサーバーポッドのアフィニティルールです。 +
これには、ノードアフィニティルールとポッドアフィニティ/アンチアフィニティルールの両方が含まれます。 + |  | 
| *`agentAffinity`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#affinity-v1-core[$$Affinity$$]__| agentAffinity は、アクティブな VirtualClusterPolicy によって適用されるエージェントポッドのアフィニティルールです。 +
これには、ノードアフィニティルールとポッドアフィニティ/アンチアフィニティルールの両方が含まれます。 + |  | 
| *`sync`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-syncconfig[$$SyncConfig$$]__| sync は、アクティブな VirtualClusterPolicy によって適用される SyncConfig です。 + |  | 
| *`runtimeClassName`* __string__| RuntimeClassName は、virtual または shared モードのクラスターのエージェントおよび +
サーバーポッドに対する代替のランタイムクラスを指定します。 + |  | 
| *`podSecurityContext`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#podsecuritycontext-v1-core[$$PodSecurityContext$$]__| PodSecurityContext は、virtual または shared モードのクラスターのエージェントおよび +
サーバーポッドに追加するカスタム SecurityContext を指定します。 + |  | 
| *`securityContext`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#securitycontext-v1-core[$$SecurityContext$$]__| SecurityContext は、virtual または shared モードのクラスターのエージェントおよび +
サーバーコンテナーに追加するカスタムコンテナー SecurityContext を指定します。 + |  | 
| *`hostUsers`* __ブール値__| HostUsers は、サーバーポッドおよびエージェントポッドのユーザー名前空間を設定します。 +
true に設定されている場合、または指定されていない場合、ポッドはホストのユーザー名前空間で実行されます。 +
false に設定されている場合、ポッド用に新しい userns が作成されます。 +
このフィールドはアルファレベルであり、UserNamespacesSupport 機能を有効にしたサーバーでのみ有効です。 + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-cluster"]
=== クラスタ



クラスターはk3kによって管理される仮想Kubernetesクラスターを定義します。
これは、バージョン、ノード構成、ネットワーキングを含む仮想クラスターの望ましい状態を指定します。k3kはこれを使用して、これらの仮想クラスターをプロビジョニングおよび管理します。



_表示される:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterlist[$$ClusterList$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| フィールド | 説明 | デフォルト | 検証
| *`apiVersion`* __string__| `k3k.io/v1beta1` |  | 
| *`kind`* __string__| `Cluster` |  | 
| *`metadata`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#objectmeta-v1-meta[$$ObjectMeta$$]__| `metadata`のフィールドについてはKubernetes APIドキュメントを参照してください。 |  | 
| *`spec`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterspec[$$ClusterSpec$$]__| Specはクラスターの望ましい状態を定義します。 + | {  } | 
| *`status`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterstatus[$$ClusterStatus$$]__| Statusは、クラスターの観測された状態を反映します。 + | {  } | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterlist"]
=== クラスターリスト



クラスターリストはクラスターリソースのリストです。





[cols="25a,55a,10a,10a", options="header"]
|===
| フィールド | 説明 | デフォルト | 検証
| *`apiVersion`* __string__| `k3k.io/v1beta1` |  | 
| *`kind`* __string__| `ClusterList` |  | 
| *`metadata`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#listmeta-v1-meta[$$ListMeta$$]__| `metadata`のフィールドについてはKubernetes APIドキュメントを参照してください。 |  | 
| *`items`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-cluster[$$Cluster$$] array__|  |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clustermode"]
=== ClusterMode

_基礎となるタイプ:_ _文字列_

ClusterModeは、クラスターで使用できるプロビジョニングモードです。

サポートされる値: `shared`、`virtual`、`hcp`。



_表示される:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterspec[$$ClusterSpec$$]
* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicyspec[$$VirtualClusterPolicySpec$$]



[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterphase"]
=== ClusterPhase

_基礎となるタイプ:_ _文字列_

クラスター・フェーズは、クラスターの現在のライフサイクルの高レベルの要約です。



_表示される:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterstatus[$$ClusterStatus$$]



[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterspec"]
=== ClusterSpec



クラスター仕様は、仮想Kubernetesクラスターの望ましい状態を定義します。



_表示される:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-cluster[$$Cluster$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| フィールド | 説明 | デフォルト | 検証
| *`version`* __string__| バージョンは、仮想ノードに使用するK3sのバージョンです。 +
K3sのバージョン管理規則に従う必要があります（例：v1.28.2-k3s1）。 +
指定されていない場合、ホストノードのKubernetesバージョンが使用されます。 + |  | 
| *`mode`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clustermode[$$ClusterMode$$]__| Modeは、クラスターのプロビジョニングモードを指定します。このフィールドは不変です。 + | shared | Enum: [shared virtual hcp] +

| *`servers`* __整数__| サーバーは、サーバー（コントロールプレーン）モードで実行するK3sポッドの数を指定します。 +
少なくとも1でなければなりません。デフォルトは1です。 + | 1 | 
| *`agents`* __整数__| エージェントは、エージェント（ワーカー）モードで実行するK3sポッドの数を指定します。 +
0以上でなければなりません。デフォルトは0です。 +
このフィールドは"shared"モードでは無視されます。 + | 0 | 
| *`clusterCIDR`* __string__| ClusterCIDRは、ポッドIPのCIDR範囲です。 +
"shared"モードでは10.42.0.0/16、"virtual"モードでは10.52.0.0/16がデフォルトです。 +
このフィールドは不変です。 + |  | 
| *`serviceCIDR`* __string__| ServiceCIDRはサービスIPのCIDR範囲です。 +
"shared"モードでは10.43.0.0/16、"virtual"モードでは10.53.0.0/16がデフォルトです。 +
このフィールドは不変です。 + |  | 
| *`clusterDNS`* __string__| ClusterDNSはCoreDNSサービスのIPアドレスです。 +
ServiceCIDR範囲内である必要があります。デフォルトは10.43.0.10です。 +
このフィールドは不変です。 + |  | 
| *`persistence`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-persistenceconfig[$$PersistenceConfig$$]__| Persistenceはetcdデータを永続化するためのオプションを指定します。 +
デフォルトは動的永続化で、PersistentVolumeClaimを使用してデータの永続化を提供します。 +
動的永続化にはデフォルトのStorageClassが必要です。 + |  | 
| *`expose`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-exposeconfig[$$ExposeConfig$$]__| ExposeはAPIサーバーを公開するためのオプションを指定します。 +
デフォルトでは、ClusterIPとしてのみ公開されます。 + |  | 
| *`nodeSelector`* __object (keys:string, values:string)__| NodeSelectorはサーバー/エージェントポッドがスケジュールされるノードラベルを指定します。 +
"shared"モードでは、これもワークロードに適用されます。 + |  | 
| *`priorityClass`* __string__| PriorityClassはサーバー/エージェントポッドのpriorityClassNameを指定します。 +
"shared"モードでは、これもワークロードに適用されます。 + |  | 
| *`tokenSecretRef`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#secretreference-v1-core[$$SecretReference$$]__| TokenSecretRefは、ワーカーノードがクラスターに参加するために使用するトークンを含むSecret参照です。 +
Secretにはデータに「token」フィールドが必要です。 + |  | 
| *`tlsSANs`* __string array__| TLSSANsはK3sサーバー証明書のサブジェクト代替名を指定します。 + |  | 
| *`serverArgs`* __string array__| ServerArgsはK3sサーバーポッドのための順序付きキー-バリューペアを指定します。 +
例: ["--tls-san=example.com"] + |  | 
| *`agentArgs`* __string array__| AgentArgsはK3sエージェントポッドのための順序付きキー-バリューペアを指定します。 +
Example: ["--node-name=my-agent-node"] + |  | 
| *`serverEnvs`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#envvar-v1-core[$$EnvVar$$] array__| ServerEnvsはサーバーポッドに設定する環境変数のリストを指定します。 + |  | 
| *`agentEnvs`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#envvar-v1-core[$$EnvVar$$] array__| AgentEnvsはエージェントポッドに設定する環境変数のリストを指定します。 + |  | 
| *`addons`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-addon[$$Addon$$] array__| Addonsはクラスター起動時にデプロイする生のYAMLを含むシークレットを指定します。 + |  | 
| *`serverLimit`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#resourcelist-v1-core[$$ResourceList$$]__| ServerLimitはサーバーノードのリソース制限を指定します。 + |  | 
| *`workerLimit`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#resourcelist-v1-core[$$ResourceList$$]__| WorkerLimitはエージェントノードのリソース制限を指定します。 + |  | 
| *`serverResources`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#resourcerequirements-v1-core[$$ResourceRequirements$$]__| ServerResourcesは、サーバーノードのリソース制限とリクエストを指定します。 + |  | 
| *`workerResources`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#resourcerequirements-v1-core[$$ResourceRequirements$$]__| WorkerResourcesは、ワーカーノードのリソース制限とリクエストを指定します。 + |  | 
| *`serverAffinity`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#affinity-v1-core[$$Affinity$$]__| ServerAffinityは、サーバーポッドのアフィニティルールを指定します。 +
これには、ノードアフィニティルールとポッドアフィニティ/アンチアフィニティルールの両方が含まれます。 + |  | 
| *`agentAffinity`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#affinity-v1-core[$$Affinity$$]__| AgentAffinityは、エージェントポッドのアフィニティルールを指定します。 +
これには、ノードアフィニティルールとポッドアフィニティ/アンチアフィニティルールの両方が含まれます。 + |  | 
| *`mirrorHostNodes`* __ブール値__| MirrorHostNodesはホストクラスターからのノードオブジェクトが +
仮想クラスターにミラーリングされるかどうかを制御します。 + |  | 
| *`customCAs`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-customcas[$$CustomCAs$$]__| CustomCAsはカスタムCA証明書のための証明書/鍵ペアを指定します。 + |  | 
| *`sync`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-syncconfig[$$SyncConfig$$]__| Syncは仮想クラスターからホストクラスターに同期されるリソースタイプを指定します。 + | {  } | 
| *`secretMounts`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-secretmount[$$SecretMount$$] array__| SecretMountsはサーバーおよびエージェントポッドにマウントするシークレットのリストを指定します。 +
各エントリは、シークレットとそのポッド内のマウントパスを定義します。 + |  | 
| *`podSecurityContext`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#podsecuritycontext-v1-core[$$PodSecurityContext$$]__| PodSecurityContext は、virtual または shared モードのクラスターのエージェントおよび +
サーバーポッドに追加するカスタム PodSecurityContext を指定します。 + |  | 
| *`securityContext`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#securitycontext-v1-core[$$SecurityContext$$]__| SecurityContext は、virtual または shared モードのクラスターのエージェントおよび +
サーバーコンテナーに追加するカスタムコンテナー SecurityContext を指定します。 +
このオプションは、virtual モードでデフォルトに設定されている SecurityContext を上書きします。 + |  | 
| *`runtimeClassName`* __string__| RuntimeClassName は、virtual または shared モードのクラスターのエージェントおよび +
サーバーポッドに対する代替のランタイムクラスを指定します。 + |  | 
| *`hostUsers`* __ブール値__| HostUsers は、サーバーポッドおよびエージェントポッドのユーザー名前空間を設定します。 +
true に設定されている場合、または指定されていない場合、ポッドはホストのユーザー名前空間で実行されます。 +
false に設定されている場合、ポッド用に新しい userns が作成されます。 +
このフィールドはアルファレベルであり、UserNamespacesSupport 機能を有効にしたサーバーでのみ有効です。 + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterstatus"]
=== ClusterStatus



ClusterStatusは、クラスターの観測された状態を反映します。



_表示される:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-cluster[$$Cluster$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| フィールド | 説明 | デフォルト | 検証
| *`hostVersion`* __string__| HostVersionは、ホストノードのKubernetesバージョンです。 + |  | 
| *`clusterCIDR`* __string__| ClusterCIDRは、ポッドIPのCIDR範囲です。 + |  | 
| *`serviceCIDR`* __string__| ServiceCIDRはサービスIPのCIDR範囲です。 + |  | 
| *`clusterDNS`* __string__| ClusterDNSはCoreDNSサービスのIPアドレスです。 + |  | 
| *`tlsSANs`* __string array__| TLSSANsはK3sサーバー証明書のサブジェクト代替名を指定します。 + |  | 
| *`policyName`* __string__| PolicyNameは、仮想クラスターにバインドされた仮想クラスターポリシー名を指定します。 + |  | 
| *`policy`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-appliedpolicy[$$AppliedPolicy$$]__| policy は、このクラスターに適用されたポリシーのステータスを表します。 +
このフィールドは VirtualClusterPolicy コントローラーによって設定されます。 + |  | 
| *`kubeletPort`* __整数__| KubeletPortは、shared モードで k3k-kubelet が使用するポートを指定します。 + |  | 
| *`conditions`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#condition-v1-meta[$$Condition$$] array__| Conditionsは、クラスターに設定された個々の条件です。 + |  | 
| *`phase`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterphase[$$ClusterPhase$$]__| Phaseは、クラスターの現在のライフサイクル状態の概要です。 + | Unknown | Enum: [Pending Provisioning Ready Failed Terminating Unknown] +

|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-configmapsyncconfig"]
=== ConfigMapSyncConfig



ConfigMapSyncConfigは、ConfigMapの同期オプションを指定します。



_表示される:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-syncconfig[$$SyncConfig$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| フィールド | 説明 | デフォルト | 検証
| *`enabled`* __ブール値__| Enabledは、リソースの同期のオン/オフスイッチです。 + | true | 
| *`selector`* __object (keys:string, values:string)__| Selectorは、同期されるリソースのラベルのセットを指定します。空の場合、 +
指定されたタイプのすべてのリソースが同期されます。 + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-credentialsource"]
=== CredentialSource



CredentialSourceは、資格情報を取得する場所を定義します。
それは、TLSキーペアまたは単一の秘密鍵のいずれかを表すことができます。



_表示される:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-credentialsources[$$CredentialSources$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| フィールド | 説明 | デフォルト | 検証
| *`secretName`* __string__| 秘密は、資格情報のタイプに基づいて特定のキーを含む必要があります： +
- TLS証明書ペアの場合（例：ServerCA）：`tls.crt`および`tls.key`。 +
- ServiceAccountToken署名キーの場合：`tls.key`. + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-credentialsources"]
=== CredentialSources



CredentialSourcesは、TLSキーペアと単一の署名キーの両方を含む、必要なすべての資格情報をリストします。



_表示される:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-customcas[$$CustomCAs$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| フィールド | 説明 | デフォルト | 検証
| *`serverCA`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-credentialsource[$$CredentialSource$$]__| ServerCAは、server-ca証明書/鍵ペアを指定します。 + |  | 
| *`clientCA`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-credentialsource[$$CredentialSource$$]__| ClientCAは、client-ca証明書/鍵ペアを指定します。 + |  | 
| *`requestHeaderCA`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-credentialsource[$$CredentialSource$$]__| RequestHeaderCAは、request-header-ca証明書/鍵ペアを指定します。 + |  | 
| *`etcdServerCA`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-credentialsource[$$CredentialSource$$]__| ETCDServerCAは、etcd-server-ca証明書/鍵ペアを指定します。 + |  | 
| *`etcdPeerCA`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-credentialsource[$$CredentialSource$$]__| ETCDPeerCAは、etcd-peer-ca証明書/鍵ペアを指定します。 + |  | 
| *`serviceAccountToken`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-credentialsource[$$CredentialSource$$]__| ServiceAccountTokenは、service-account-tokenキーを指定します。 + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-customcas"]
=== CustomCAs



カスタムCA証明書のための証明書/鍵ペアを指定します。



_表示される:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterspec[$$ClusterSpec$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| フィールド | 説明 | デフォルト | 検証
| *`enabled`* __ブール値__| 有効にすると、この機能がオンまたはオフになります。 + | true | 
| *`sources`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-credentialsources[$$CredentialSources$$]__| ソースは、すべての必要なカスタムCA証明書のソースを定義します。 + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-exposeconfig"]
=== ExposeConfig



ExposeConfigは、APIサーバーを公開するためのオプションを指定します。



_表示される:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterspec[$$ClusterSpec$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| フィールド | 説明 | デフォルト | 検証
| *`ingress`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-ingressconfig[$$IngressConfig$$]__| Ingressは、Ingressを通じてAPIサーバーを公開するためのオプションを指定します。 + |  | 
| *`loadBalancer`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-loadbalancerconfig[$$LoadBalancerConfig$$]__| LoadBalancerは、LoadBalancerサービスを通じてAPIサーバーを公開するためのオプションを指定します。 + |  | 
| *`nodePort`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-nodeportconfig[$$NodePortConfig$$]__| NodePortは、NodePortを通じてAPIサーバーを公開するためのオプションを指定します。 + |  | 
| *`annotations`* __object (keys:string, values:string)__| Annotationsは、生成されるServiceに追加するアノテーションを指定します。 + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-ingressconfig"]
=== IngressConfig



IngressConfigは、Ingressを通じてAPIサーバーを公開するためのオプションを指定します。



_表示される:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-exposeconfig[$$ExposeConfig$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| フィールド | 説明 | デフォルト | 検証
| *`annotations`* __object (keys:string, values:string)__| Annotationsは、Ingressに追加するアノテーションを指定します。 + |  | 
| *`ingressClassName`* __string__| IngressClassNameは、Ingressに使用するIngressClassを指定します。 + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-ingresssyncconfig"]
=== IngressSyncConfig



IngressSyncConfigは、Ingressの同期オプションを指定します。



_表示される:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-syncconfig[$$SyncConfig$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| フィールド | 説明 | デフォルト | 検証
| *`enabled`* __ブール値__| Enabledは、リソースのsyncのオン/オフスイッチです。 + | false | 
| *`selector`* __object (keys:string, values:string)__| Selectorは、syncされるリソースのラベルのセットを指定します。空の場合、 +
指定されたタイプのすべてのリソースがsyncされます。 + |  | 
| *`disableTLSSecretTranslation`* __ブール値__| DisableTLSSecretTranslationは、仮想クラスターからホストクラスターへの +
TLSシークレットの変換のオン/オフスイッチです + | false | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-loadbalancerconfig"]
=== LoadBalancerConfig



LoadBalancerConfigは、LoadBalancerサービスを通じてAPIサーバーを公開するためのオプションを指定します。



_表示される:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-exposeconfig[$$ExposeConfig$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| フィールド | 説明 | デフォルト | 検証
| *`serverPort`* __整数__| ServerPortは、タイプがLoadBalancerのときにK3sサーバーが公開されるポートです。 +
指定されていない場合、デフォルトのhttps 443ポートが割り当てられます。 +
0または負の値の場合、ポートは公開されません。 + |  | 
| *`etcdPort`* __整数__| ETCDPortは、タイプがLoadBalancerのときにETCDサービスが公開されるポートです。 +
指定されていない場合、デフォルトのetcd 2379ポートが割り当てられます。 +
0または負の値の場合、ポートは公開されません。 + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-nodeportconfig"]
=== NodePortConfig



NodePortConfigは、NodePortを通じてAPIサーバーを公開するためのオプションを指定します。



_表示される:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-exposeconfig[$$ExposeConfig$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| フィールド | 説明 | デフォルト | 検証
| *`serverPort`* __整数__| ServerPortは、NodePortタイプのときにK3sサーバーが公開される各ノードのポートです。 +
指定されていない場合、30000から32767の間のランダムなポートが割り当てられます。 +
範囲外の場合、ポートは公開されません。 + |  | 
| *`etcdPort`* __整数__| ETCDPortは、NodePortタイプのときにETCDサービスが公開される各ノードのポートです。 +
指定されていない場合、30000から32767の間のランダムなポートが割り当てられます。 +
範囲外の場合、ポートは公開されません。 + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-persistenceconfig"]
=== PersistenceConfig



PersistenceConfigは、etcdデータを永続化するためのオプションを指定します。



_表示される:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterspec[$$ClusterSpec$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| フィールド | 説明 | デフォルト | 検証
| *`type`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-persistencemode[$$PersistenceMode$$]__| Typeは、永続化モードを指定します。 + | dynamic | 
| *`storageClassName`* __string__| StorageClassNameは、PVCに使用するStorageClassの名前です。 +
このフィールドは「動的」モードでのみ関連します。 + |  | 
| *`storageRequestSize`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#quantity-resource-api[$$Quantity$$]__| StorageRequestSizeは、PVCの要求サイズです。 +
このフィールドは「動的」モードでのみ関連します。 + | 2G | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-persistencemode"]
=== PersistenceMode

_基礎となるタイプ:_ _文字列_

PersistenceModeは、クラスターのストレージモードです。



_表示される:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-persistenceconfig[$$PersistenceConfig$$]



[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-persistentvolumeclaimsyncconfig"]
=== PersistentVolumeClaimSyncConfig



PersistentVolumeClaimSyncConfigは、PersistentVolumeClaimの同期オプションを指定します。



_表示される:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-syncconfig[$$SyncConfig$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| フィールド | 説明 | デフォルト | 検証
| *`enabled`* __ブール値__| Enabledは、リソースのsyncのオン/オフスイッチです。 + | true | 
| *`selector`* __object (keys:string, values:string)__| Selectorは、syncされるリソースのラベルのセットを指定します。空の場合、 +
指定されたタイプのすべてのリソースがsyncされます。 + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-podsecurityadmissionlevel"]
=== PodSecurityAdmissionLevel

_基礎となるタイプ:_ _文字列_

PodSecurityAdmissionLevelは、名前空間内のポッドに適用されるポリシーレベルです。

サポートされる値: `privileged`、`baseline`、`restricted`。



_表示される:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicyspec[$$VirtualClusterPolicySpec$$]



[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-priorityclasssyncconfig"]
=== PriorityClassSyncConfig



PriorityClassSyncConfigは、PriorityClassの同期オプションを指定します。



_表示される:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-syncconfig[$$SyncConfig$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| フィールド | 説明 | デフォルト | 検証
| *`enabled`* __ブール値__| Enabledは、リソースの同期のオン/オフスイッチです。 + | false | 
| *`selector`* __object (keys:string, values:string)__| Selectorは、syncされるリソースのラベルのセットを指定します。空の場合、 +
指定されたタイプのすべてのリソースがsyncされます。 + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-secretmount"]
=== SecretMount



SecretMountは、サーバーまたはエージェントポッドにシークレットをマウントし、カスタム設定、証明書、その他の機密データを利用できるように定義します。



_表示される:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterspec[$$ClusterSpec$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| フィールド | 説明 | デフォルト | 検証
| *`secretName`* __string__| secretNameは、ポッドのネームスペースで使用するシークレットの名前です。 +
その他の情報: https://kubernetes.io/docs/concepts/storage/volumes#secret + |  | 
| *`items`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#keytopath-v1-core[$$KeyToPath$$] array__| items: 未指定の場合、参照されたデータフィールド内の各キーと値のペアが +
Secretは、名前がキーで内容が値のファイルとしてボリュームに投影されます。 +
キーがファイル名、内容が値となります。指定された場合、リストされたキーは +
指定されたパスに投影され、リストされていないキーは投影されません。 +
存在しません。Secretに存在しないキーが指定された場合、 +
Secretに存在しないキーが指定された場合、ボリュームのセットアップは、オプションとしてマークされていない場合にエラーとなります。相対的でなければならず、'..'パスを含むことや'..'で始まることはできません。 +
相対的でなければならず、「..」パスを含むことや「..」で始まることはできません。 + |  | 
| *`defaultMode`* __整数__| defaultModeは任意のフィールドで、作成されたファイルのパーミッションを設定するためのモードビットを指定します。 +
値は、0000から0777の間の8進数値、または0から511の間の10進数値でなければなりません。 +
YAMLでは8進数値と10進数値の両方が受け入れられますが、JSONでは10進数値が要求されます。 +
これはモードビットのための指定です。デフォルトは0644です。 +
パス内のディレクトリはこの設定の影響を受けません。 +
これは、ファイルに影響を与える他のオプションと競合する可能性があります。 +
モードはfsGroupなどの他のファイルモード設定と競合する場合があり、その結果、他のモードビットが設定されることもあります。 + |  | 
| *`optional`* __ブール値__| オプションのフィールドは、Secretまたはそのキーが定義される必要があるかどうかを指定します。 + |  | 
| *`name`* __string__| Name は、サーバーポッドまたはエージェントポッドのボリュームおよび +
ボリュームマウントの名前として使用される Secret マウントボリュームの名前です。 +
空の場合は、代わりに Secret の名前が使用されます。 + |  | MaxLength: 63 +
MinLength: 1 +
Pattern: `^[a-z0-9]([-a-z0-9]*[a-z0-9])?$` +

| *`mountPath`* __string__| MountPathは、サーバーおよびエージェントポッド内のパスです。 +
シークレットの内容がマウントされます。 + |  | 
| *`subPath`* __string__| SubPathは、ルートの代わりにマウントするためのシークレット内のオプションのパスです。 +
指定された場合、シークレットから指定されたキーのみがファイルとしてマウントされます。 +
MountPathで、親ディレクトリは書き込み可能のままです。 + |  | 
| *`role`* __string__| Roleは、Secretのマウントに使用されるk3kポッドのタイプです。 + |  | Enum: [server agent all] +

|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-secretsyncconfig"]
=== SecretSyncConfig



SecretSyncConfigは、Secretの同期オプションを指定します。



_表示される:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-syncconfig[$$SyncConfig$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| フィールド | 説明 | デフォルト | 検証
| *`enabled`* __ブール値__| Enabledは、リソースの同期のオン/オフスイッチです。 + | true | 
| *`selector`* __object (keys:string, values:string)__| Selectorは、同期されるリソースのラベルのセットを指定します。空の場合、 +
指定されたタイプのすべてのリソースが同期されます。 + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-servicesyncconfig"]
=== ServiceSyncConfig



ServiceSyncConfigは、Serviceの同期オプションを指定します。



_表示される:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-syncconfig[$$SyncConfig$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| フィールド | 説明 | デフォルト | 検証
| *`enabled`* __ブール値__| Enabledは、リソースの同期のオン/オフスイッチです。 + | true | 
| *`selector`* __object (keys:string, values:string)__| Selectorは、同期されるリソースのラベルのセットを指定します。空の場合、 +
指定されたタイプのすべてのリソースが同期されます。 + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-storageclasssyncconfig"]
=== StorageClassSyncConfig



StorageClassSyncConfigは、StorageClassの同期オプションを指定します。



_表示される:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-syncconfig[$$SyncConfig$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| フィールド | 説明 | デフォルト | 検証
| *`enabled`* __ブール値__| Enabledは、リソースの同期のオン/オフスイッチです。 + | false | 
| *`selector`* __object (keys:string, values:string)__| Selectorは、同期されるリソースのラベルのセットを指定します。空の場合、 +
指定されたタイプのすべてのリソースが同期されます。 + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-syncconfig"]
=== SyncConfig



SyncConfigは、仮想クラスターからホストクラスターに同期されるべきリソースを含みます。



_表示される:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-appliedpolicy[$$AppliedPolicy$$]
* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clusterspec[$$ClusterSpec$$]
* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicyspec[$$VirtualClusterPolicySpec$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| フィールド | 説明 | デフォルト | 検証
| *`services`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-servicesyncconfig[$$ServiceSyncConfig$$]__| サービスリソースの同期設定。 + | { enabled:true } | 
| *`configMaps`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-configmapsyncconfig[$$ConfigMapSyncConfig$$]__| ConfigMapsリソースの同期設定。 + | { enabled:true } | 
| *`secrets`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-secretsyncconfig[$$SecretSyncConfig$$]__| Secretsリソースの同期設定。 + | { enabled:true } | 
| *`ingresses`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-ingresssyncconfig[$$IngressSyncConfig$$]__| Ingressesリソースの同期設定。 + | { enabled:false } | 
| *`persistentVolumeClaims`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-persistentvolumeclaimsyncconfig[$$PersistentVolumeClaimSyncConfig$$]__| PersistentVolumeClaimsリソースの同期設定。 + | { enabled:true } | 
| *`priorityClasses`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-priorityclasssyncconfig[$$PriorityClassSyncConfig$$]__| PriorityClassesリソースの同期設定。 + | { enabled:false } | 
| *`storageClasses`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-storageclasssyncconfig[$$StorageClassSyncConfig$$]__| StorageClassesリソースの同期設定。 + | { enabled:false } | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicy"]
=== VirtualClusterPolicy



VirtualClusterPolicyは、クラスター・ポリシー内のクラスターに対して共通の構成と制約を定義するためのものです。



_表示される:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicylist[$$VirtualClusterPolicyList$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| フィールド | 説明 | デフォルト | 検証
| *`apiVersion`* __string__| `k3k.io/v1beta1` |  | 
| *`kind`* __string__| `VirtualClusterPolicy` |  | 
| *`metadata`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#objectmeta-v1-meta[$$ObjectMeta$$]__| `metadata`のフィールドについてはKubernetes APIドキュメントを参照してください。 |  | 
| *`spec`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicyspec[$$VirtualClusterPolicySpec$$]__| Specは、VirtualClusterPolicyの望ましい状態を定義します。 + | {  } | 
| *`status`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicystatus[$$VirtualClusterPolicyStatus$$]__| Statusは、VirtualClusterPolicyの観測された状態を反映します。 + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicylist"]
=== VirtualClusterPolicyList



VirtualClusterPolicyListは、VirtualClusterPolicyリソースのリストです。





[cols="25a,55a,10a,10a", options="header"]
|===
| フィールド | 説明 | デフォルト | 検証
| *`apiVersion`* __string__| `k3k.io/v1beta1` |  | 
| *`kind`* __string__| `VirtualClusterPolicyList` |  | 
| *`metadata`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#listmeta-v1-meta[$$ListMeta$$]__| `metadata`のフィールドについてはKubernetes APIドキュメントを参照してください。 |  | 
| *`items`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicy[$$VirtualClusterPolicy$$] array__|  |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicyspec"]
=== VirtualClusterPolicySpec



VirtualClusterPolicySpecは、VirtualClusterPolicyの望ましい状態を定義します。



_表示される:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicy[$$VirtualClusterPolicy$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| フィールド | 説明 | デフォルト | 検証
| *`quota`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#resourcequotaspec-v1-core[$$ResourceQuotaSpec$$]__| Quotaは、クラスター・ポリシー内のクラスターに対するリソース制限を指定します。 + |  | 
| *`limit`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#limitrangespec-v1-core[$$LimitRangeSpec$$]__| Limitは、VirtualClusterPolicy内のすべてのポッドに適用されるLimitRangeを指定します。 +
デフォルト値と制約（最小値/最大値）を設定するためのものです。 + |  | 
| *`defaultNodeSelector`* __object (keys:string, values:string)__| DefaultNodeSelectorは、ターゲットネームスペース内のすべてのクラスター（サーバー + エージェント）に適用されるノードセレクターを指定します。 + |  | 
| *`defaultPriorityClass`* __string__| DefaultPriorityClassは、ターゲットネームスペース内のすべてのクラスターのすべてのポッドに適用されるpriorityClassNameを指定します。 + |  | 
| *`defaultServerAffinity`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#affinity-v1-core[$$Affinity$$]__| DefaultServerAffinityは、対象の名前空間内のすべてのクラスターのサーバーポッドに適用されるアフィニティルールを指定します。 +
これには、ノードアフィニティルールとポッドアフィニティ/アンチアフィニティルールの両方が含まれます。 + |  | 
| *`defaultAgentAffinity`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#affinity-v1-core[$$Affinity$$]__| DefaultAgentAffinityは、対象の名前空間内のすべてのクラスターのエージェントポッドに適用されるアフィニティルールを指定します。 +
これには、ノードアフィニティルールとポッドアフィニティ/アンチアフィニティルールの両方が含まれます。 + |  | 
| *`allowedMode`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-clustermode[$$ClusterMode$$]__| AllowedModeは、許可されるクラスターのプロビジョニングモードを指定します。 + | shared | Enum: [shared virtual hcp] +

| *`disableNetworkPolicy`* __ブール値__| DisableNetworkPolicyは、クラスターの分離のためにデフォルトのネットワークポリシーの作成を無効にするかどうかを示します。 + |  | 
| *`podSecurityAdmissionLevel`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-podsecurityadmissionlevel[$$PodSecurityAdmissionLevel$$]__| PodSecurityAdmissionLevelは、ネームスペース内のポッドに適用されるポッドセキュリティの入場レベルを指定します。 + |  | Enum: [privileged baseline restricted] +

| *`sync`* __xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-syncconfig[$$SyncConfig$$]__| Syncは仮想クラスターからホストクラスターに同期されるリソースタイプを指定します。 + | {  } | 
| *`runtimeClassName`* __string__| SecurityContext は、virtual または shared モードのクラスターのエージェントおよび +
サーバーポッドに追加するカスタム SecurityContext を指定します。 + |  | 
| *`securityContext`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#securitycontext-v1-core[$$SecurityContext$$]__| RuntimeClassName は、virtual または shared モードのクラスターのエージェントおよび +
サーバーポッドに対する代替のランタイムクラスを指定します。 + |  | 
| *`hostUsers`* __ブール値__| HostUsers は、サーバーポッドおよびエージェントポッドのユーザー名前空間を設定します。 +
true に設定されている場合、または指定されていない場合、ポッドはホストのユーザー名前空間で実行されます。 +
false に設定されている場合、ポッド用に新しい userns が作成されます。 +
このフィールドはアルファレベルであり、UserNamespacesSupport 機能を有効にしたサーバーでのみ有効です。 + |  | 
|===


[id="{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicystatus"]
=== VirtualClusterPolicyStatus



VirtualClusterPolicyStatusは、VirtualClusterPolicyの観測された状態を反映します。



_表示される:_

* xref:{anchor_prefix}-github-com-rancher-k3k-pkg-apis-k3k-io-v1beta1-virtualclusterpolicy[$$VirtualClusterPolicy$$]

[cols="25a,55a,10a,10a", options="header"]
|===
| フィールド | 説明 | デフォルト | 検証
| *`observedGeneration`* __整数__| ObservedGenerationは、ステータスが更新された時点のジェネレーションです。 + |  | 
| *`lastUpdateTime`* __string__| LastUpdateは、ステータスが最後に更新されたタイムスタンプです。 + |  | 
| *`summary`* __string__| Summaryは、ステータスの概要です。 + |  | 
| *`conditions`* __link:https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.31/#condition-v1-meta[$$Condition$$] array__| Conditionsは、クラスターに設定された個々の条件です。 + |  | 
|===


